Bumping versions, removing version overrides